sane-backends (1.0.27-1~experimental4) UNRELEASED; urgency=medium

  * Change to my new email address.
  * debian/rules:
    - Add override_dh_autoreconf to prevend delete of libtool.m4
      (Closes: #887032).
  * debian/copyright:
    - Use secure copyright format URI.
  * Migrate to debhelper 11:
    - Change debian/compat to 11.
    - Bump minimum debhelper version in debian/control to >= 11.
  * Declare compliance with Debian Policy 4.1.3 (No changes needed).
  * Remove the RUN parameter from /etc/default/saned and /etc/init.d/saned
    in relation to Debian Policy Manual section 9.3.3.1.
  * Refresh debian/patches/0100-source_spelling.patch.
  * New debian/patches/0715-20-sane.hwdb_multi-arch.patch:
    - Remove buildtime from 20-sane.hwdb to make the file multi-arch ready
      (Closes: #880391)
  * debian/libsane1.README.Debian:
    - Replace ConsoleKit with ConsoleKit/systemd-logind (Closes: #872364).

 -- Jörg Frings-Fürst <debian@jff.email>  Sun, 12 Nov 2017 13:59:10 +0100

sane-backends (1.0.27-1~experimental3) experimental; urgency=medium

  * debian/control:
    - Drop outdated Recommends libsane-extras-dev to libsane-dev
      binary package (Closes: #868265).
    - Drop outdated texlive and texlive-latex-extra Build-Dependency.
  * debian/rules:
    - Drop create and install the /etc/sane.d/dll.d directory.
    - Move rules from override_dh_install-arch and override_dh_auto_install-arch
      to override_dh_install-indep and override_dh_auto_install-indep
      to build the arch all packages without error (CLoses: #870455).
    - At dh_systemd_enable use debian/saned.socket instead saned.socket.
    - Use DEB* vars via default.mk instead own functions.
  * Move libsane-common.install.in to libsane-common.install.
  * debian/copyright:
    - Add year 2017 for debian/*.
  * New debian/patches/0150-genesys-Fix-use-of-uninitialized-variable.patch:
    - Initializing usb_mode (Closes:# 869673).
      Thanks to Florian Lindemann <linde@bfw-online.de> and